# TS

./: README.md
Battleships/: .gitignore  CMakeLists.txt  Handleliste.html  Handleliste.org  README.md  Todo.org  compileAndRun.sh  debug.sh  pullAndRunForever.sh
Battleships/ArcadeSimulator/: SimMain.py
Battleships/BattleshipsArduino/: BattleshipsArduino.ino
Battleships/Debug/: Debug.ino
Battleships/Debug/SerialPlayer/: SerialPlayer.ino
Battleships/Old/ArcadeSimulator/: SimMain.py
Battleships/Old/RaspPi/: CMakeLists.txt  (+1 more)
Battleships/PureArduino/: ArduinoInterface.hpp  Battleship.hpp  BattleshipsMode.cpp  CometMode.cpp  GameLogic.cpp  GameLogic.hpp  GameModes.cpp  GameModes.hpp  LotsOfHeader.hpp  MenuMode.cpp  OceanDrawer.cpp  PlaceShipsMode.cpp  PongMode.cpp  PureArduino.ino  SplashScreen.cpp  TetrisMode.cpp  sound
Battleships/PureArduinoSim/: .gitignore  ArduinoSim  FakeArduino.cpp  FakeArduino.hpp  Makefile  Util.cpp  main.cpp  sound.cpp  sound.hpp
Battleships/RaspPi/: .gitignore  CMakeLists.txt  README.md  compileAndRun.sh  debug.sh  emulate.sh  pullAndRunForever.sh
Battleships/Sound/: SoundInterface.hpp  SoundSystem.cpp  SoundSystem.hpp  musicPaths.hpp  musicPaths.txt  soundPaths.hpp  soundPaths.txt  soundcodes.hpp  soundpaths.hpp
Battleships/SoundFromSerial/: .gitignore  LXDE_pi_entry.sh  Makefile  SerialIO.cpp  SoundFromSerial  auto_listener.desktop  auto_listener.sh  main.cpp  sound.cpp  sound.hpp
Battleships/src/: ArduinoEncoder.cpp  ArduinoEncoder.hpp  BattleMain.cpp  Game.cpp  Game.hpp  SerialIO.cpp  SerialIO.hpp  Util.cpp  Util.hpp
(+23 files in other folders)
